--- a/front/index.html
+++ b/front/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guitar Shop</title>
     <link href="./src/assets/output.css" rel="stylesheet">
+    <link rel="preload" fetchpriority="high" as="image" href="./src/assets/img/background-image.jpg" type="image/png">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class=""></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
